--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome To GMESTE</h1>
+        <h1>Welcome To cansss Games</h1>
         <p>Select a game to start playing!</p>
     </header>
 
@@ -76,13 +76,37 @@
         <h1>Web Games Made By My Freinds</h1>
         <a href="qs.html" class="game-button">Project Quantum Shadow</a>
     </div>
+        <div class="button-container">
+        <h1>Retro Games</h1>
+        <a href="warioware.html" class="game-button">WarioWare Inc. (GBA)</a>
+        <a href="contra.html" class="game-button">Contra (NES)</a>
+        <a href="tetris.html" class="game-button">Tetris (GB)</a>
+        <a href="mario.html" class="game-button">Super Mario Bros (NES)</a>
+        <a href="kirby.html" class="game-button">Kirby's Dream Land (GB)</a>
+        <a href="mother3.html" class="game-button">Mother 3 (GBA)</a>
+        <a href="ssb.html" class="game-button">Super Smash Bros (N64)</a>
+        <a href="ge007.html" class="game-button">Golden Eye 007 (N64)</a>
+        <a href="zelda.html" class="game-button">The Legend Of Zelda (NES)</a>
+        <a href="metroid.html" class="game-button">Metroid (NES)</a>
+        <a href="metroids.html" class="game-button">Super Metroid (SNES)</a>
+        <a href="sf2.html" class="game-button">Street Fighter 2 (Arcades)</a>
+        <a href="rhythm.html" class="game-button">Rhythm Heaven (DS)</a>
+        <a href="tomodachi.html" class="game-button">Tomodachi Collection (DS)</a>
+    </div>
+    <div class="button-container">
+        <h1>Flash Games</h1>
+        <a href="stickrpg.html" class="game-button">Stick RPG (2005)</a>
+        <a href="fpa1&2.html" class="game-button">Fancypants Adventures Worlds 1 And 2 (2006,2008)</a>
+        <a href="boiwotl.html" class="game-button">The Binding Of Issac: Wrath Of The Lamb (2012)</a>
+    </div>
     <div class="button-container">
         <h1>Cute Animal Pictures</h1>
         <a href="cats.html" class="game-button">Cat</a>
     </div>
 
     <footer>
-        &copy; 2025 GMESTE - All Rights Reserved
+        &copy; 2025 cansss - All Rights Reserved
     </footer>
 </body>
 </html>
+
