--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <a href="arena.html" class="game-button">Arena Destroyer</a>
         <a href="runner.html" class="game-button">Neon Runner</a>
         <a href="gamble.html" class="game-button">Lucky Dice</a>
+        <a href="scary.html" class="game-button">Facility Escape</a>
     </div>
     <div class="button-container">
         <h1>Web Games Made By My Freinds</h1>
@@ -109,4 +110,5 @@
     </footer>
 </body>
 </html>
+
 
