--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <a href="runner.html" class="game-button">Neon Runner</a>
         <a href="gamble.html" class="game-button">Lucky Dice</a>
         <a href="scary.html" class="game-button">Facility Escape</a>
+        <a href="zombiesurvival.html" class="game-button">Facility Escape</a>
     </div>
     <div class="button-container">
         <h1>Web Games Made By My Freinds</h1>
@@ -110,5 +111,6 @@
     </footer>
 </body>
 </html>
+
 
 
